added another photo

--- a/index.html
+++ b/index.html
@@ -64,15 +64,18 @@
     <!-- food menu Section Starts here -->
     <section class="food-menu">
       <div class="container">
-        <h2 class="text-center float-container">Explore Foods</h2>
+        <h2 class="text-center">Explore Foods</h2>
         <div class="food-menu-box-4">
           <div class="food-menu-img">
-            Image
+            <img src="" alt="">
           </div>
           <div class="food-menu-desc">
             <h4>Food Title</h4>
-            <p class="food-price">$2.3</p>
-            <p class="food-detail">Made with Italian Sauce, Chicken, and organice vegetables.</p>
+            <p>$2.3</p>
+            <p>Made with Italian Sauce, Chicken, and organice vegetables.</p>
+            <br>
+            <a href="#" class="btn btn-primary">Order Now</a>
+          </div>
         </div>
         <div class="food-menu-box-4">Food Menu 2 </div>
         <div class="food-menu-box-4">Food Menu 3 </div>
