added css parts

--- a/index.html
+++ b/index.html
@@ -63,23 +63,86 @@
 
     <!-- food menu Section Starts here -->
     <section class="food-menu">
-      <div class="container">
+      <div class="container float-container">
         <h2 class="text-center">Explore Foods</h2>
-        <div class="food-menu-box-4">
+        <div class="food-menu-box-6">
           <div class="food-menu-img">
-            <img src="" alt="">
+            <img src="images/menu-pizza.jpg" alt="Chicken Hawain Pizza" class="img-responsive img-curve">
           </div>
           <div class="food-menu-desc">
             <h4>Food Title</h4>
-            <p>$2.3</p>
-            <p>Made with Italian Sauce, Chicken, and organice vegetables.</p>
+            <p class="food-price">$2.3</p>
+            <p class="food-detail">Made with Italian Sauce, Chicken, and organice vegetables.</p>
             <br>
             <a href="#" class="btn btn-primary">Order Now</a>
+            <div class="clearfix"></div>
           </div>
         </div>
-        <div class="food-menu-box-4">Food Menu 2 </div>
-        <div class="food-menu-box-4">Food Menu 3 </div>
-        <div class="food-menu-box-4">Food Menu 4 </div>
+        <div class="food-menu-box-6">
+          <div class="food-menu-img">
+            <img src="images/menu-pizza.jpg" alt="Chicken Hawain Pizza" class="img-responsive img-curve">
+          </div>
+          <div class="food-menu-desc">
+            <h4>Food Title</h4>
+            <p class="food-price">$2.3</p>
+            <p class="food-detail">Made with Italian Sauce, Chicken, and organice vegetables.</p>
+            <br>
+            <a href="#" class="btn btn-primary">Order Now</a>
+            <div class="clearfix"></div>
+          </div>
+        </div>
+        <div class="food-menu-box-6">
+          <div class="food-menu-img">
+            <img src="images/menu-pizza.jpg" alt="Chicken Hawain Pizza" class="img-responsive img-curve">
+          </div>
+          <div class="food-menu-desc">
+            <h4>Food Title</h4>
+            <p class="food-price">$2.3</p>
+            <p class="food-detail">Made with Italian Sauce, Chicken, and organice vegetables.</p>
+            <br>
+            <a href="#" class="btn btn-primary">Order Now</a>
+            <div class="clearfix"></div>
+          </div>
+        </div>
+        <div class="food-menu-box-6">
+          <div class="food-menu-img">
+            <img src="images/menu-pizza.jpg" alt="Chicken Hawain Pizza" class="img-responsive img-curve">
+          </div>
+          <div class="food-menu-desc">
+            <h4>Food Title</h4>
+            <p class="food-price">$2.3</p>
+            <p class="food-detail">Made with Italian Sauce, Chicken, and organice vegetables.</p>
+            <br>
+            <a href="#" class="btn btn-primary">Order Now</a>
+            <div class="clearfix"></div>
+          </div>
+        </div>
+        <div class="food-menu-box-6">
+          <div class="food-menu-img">
+            <img src="images/menu-pizza.jpg" alt="Chicken Hawain Pizza" class="img-responsive img-curve">
+          </div>
+          <div class="food-menu-desc">
+            <h4>Food Title</h4>
+            <p class="food-price">$2.3</p>
+            <p class="food-detail">Made with Italian Sauce, Chicken, and organice vegetables.</p>
+            <br>
+            <a href="#" class="btn btn-primary">Order Now</a>
+            <div class="clearfix"></div>
+          </div>
+        </div>
+        <div class="food-menu-box-6">
+          <div class="food-menu-img">
+            <img src="images/menu-pizza.jpg" alt="Chicken Hawain Pizza" class="img-responsive img-curve">
+          </div>
+          <div class="food-menu-desc">
+            <h4>Food Title</h4>
+            <p class="food-price">$2.3</p>
+            <p class="food-detail">Made with Italian Sauce, Chicken, and organice vegetables.</p>
+            <br>
+            <a href="#" class="btn btn-primary">Order Now</a>
+            <div class="clearfix"></div>
+          </div>
+        </div>
         <div class="clearfix"></div>
       </div>
     </section>
@@ -87,11 +150,11 @@
 
     <!-- social Section Starts here -->
     <section class="social">
-      <div class="container">
+      <div class="container text-center">
         <ul>
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Twitter</a></li>
+          <li><a href="#"><img width="48" height="48" src="https://img.icons8.com/fluency/48/facebook-new.png" alt="facebook-new"/></a></li>
+          <li><a href="#"><img width="48" height="48" src="https://img.icons8.com/fluency/48/instagram-new.png" alt="instagram-new"/></a></li>
+          <li><a href="#"><img width="48" height="48" src="https://img.icons8.com/color/48/twitter--v1.png" alt="twitter--v1"/></a></li>
         </ul>
       </div>
     </section>
@@ -99,7 +162,7 @@
 
     <!-- footer Section Starts here -->
     <section class="footer">
-      <div class="container">
+      <div class="container text-center">
         <p>All rights reserved. Designed By <a href="#">Hasindu Koshitha</a></p>
       </div>
     </section>
