added all css parts

--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <title>Resturant Website</title>
 
     <!-- CSS Link -->
-     <link rel="stylesheet" href="css/style.css ">
+    <link rel="stylesheet" href="css/style.css " />
   </head>
   <body>
     <!-- Navbar Section Starts here -->
     <section class="navbar">
       <div class="container">
         <div class="logo">
-          <img src="images/logo.png" alt="Resturant Logo" class="img-responsive">
+          <img
+            src="images/logo.png"
+            alt="Resturant Logo"
+            class="img-responsive"
+          />
         </div>
         <div class="menu text-right">
           <ul>
@@ -33,8 +37,13 @@
     <section class="food-search">
       <div class="container">
         <form action="">
-          <input type="search" name="search" placeholder="Search for Food...">  
-          <input type="submit" value="Search" name="submit" class="btn btn-primary">
+          <input type="search" name="search" placeholder="Search for Food..." />
+          <input
+            type="submit"
+            value="Search"
+            name="submit"
+            class="btn btn-primary"
+          />
         </form>
       </div>
     </section>
@@ -43,19 +52,37 @@
     <!-- category Section Starts here -->
     <section class="category">
       <div class="container">
-        <h2 class="text-center">Categories</h2>
+        <h2 class="text-center">Explore foods</h2>
+        <a href="#" >
+          <div class="box-3 float-container" >
+            <img
+              src="images/pizza.jpg"
+              alt="Pizza Category"
+              class="img-responsive img-curve"
+            />
+            <h3 class="float-text text-white">Pizza</h3>
+          </div>
+        </a>
+        <a href="#">
         <div class="box-3 float-container">
-          <img src="images/pizza.jpg" alt="Pizza Category" class="img-responsive img-curve">
-          <h3 class="float-text text-white">Pizza</h3>
-        </div>
-        <div class="box-3 float-container">
-          <img src="images/shorteats.jpg" alt="Sweets Category" class="img-responsive img-curve">
+          <img
+            src="images/shorteats.jpg"
+            alt="Sweets Category"
+            class="img-responsive img-curve"
+          />
           <h3 class="float-text text-white">Sweets</h3>
         </div>
+      </a>
+      <a href="#">
         <div class="box-3 float-container">
-          <img src="images/burger.jpg" alt="Burger Category" class="img-responsive img-curve">
+          <img
+            src="images/burger.jpg"
+            alt="Burger Category"
+            class="img-responsive img-curve"
+          />
           <h3 class="float-text text-white">Burger</h3>
         </div>
+      </a>
         <div class="clearfix"></div>
       </div>
     </section>
@@ -64,81 +91,117 @@
     <!-- food menu Section Starts here -->
     <section class="food-menu">
       <div class="container float-container">
-        <h2 class="text-center">Explore Foods</h2>
+        <h2 class="text-center">Food Menu</h2>
         <div class="food-menu-box-6">
           <div class="food-menu-img">
-            <img src="images/menu-pizza.jpg" alt="Chicken Hawain Pizza" class="img-responsive img-curve">
+            <img
+              src="images/menu-pizza.jpg"
+              alt="Chicken Hawain Pizza"
+              class="img-responsive img-curve"
+            />
           </div>
           <div class="food-menu-desc">
             <h4>Food Title</h4>
             <p class="food-price">$2.3</p>
-            <p class="food-detail">Made with Italian Sauce, Chicken, and organice vegetables.</p>
-            <br>
+            <p class="food-detail">
+              Made with Italian Sauce, Chicken, and organice vegetables.
+            </p>
+            <br />
             <a href="#" class="btn btn-primary">Order Now</a>
             <div class="clearfix"></div>
           </div>
         </div>
         <div class="food-menu-box-6">
           <div class="food-menu-img">
-            <img src="images/menu-pizza.jpg" alt="Chicken Hawain Pizza" class="img-responsive img-curve">
+            <img
+              src="images/menu-pizza.jpg"
+              alt="Chicken Hawain Pizza"
+              class="img-responsive img-curve"
+            />
           </div>
           <div class="food-menu-desc">
             <h4>Food Title</h4>
             <p class="food-price">$2.3</p>
-            <p class="food-detail">Made with Italian Sauce, Chicken, and organice vegetables.</p>
-            <br>
+            <p class="food-detail">
+              Made with Italian Sauce, Chicken, and organice vegetables.
+            </p>
+            <br />
             <a href="#" class="btn btn-primary">Order Now</a>
             <div class="clearfix"></div>
           </div>
         </div>
         <div class="food-menu-box-6">
           <div class="food-menu-img">
-            <img src="images/menu-pizza.jpg" alt="Chicken Hawain Pizza" class="img-responsive img-curve">
+            <img
+              src="images/menu-pizza.jpg"
+              alt="Chicken Hawain Pizza"
+              class="img-responsive img-curve"
+            />
           </div>
           <div class="food-menu-desc">
             <h4>Food Title</h4>
             <p class="food-price">$2.3</p>
-            <p class="food-detail">Made with Italian Sauce, Chicken, and organice vegetables.</p>
-            <br>
+            <p class="food-detail">
+              Made with Italian Sauce, Chicken, and organice vegetables.
+            </p>
+            <br />
             <a href="#" class="btn btn-primary">Order Now</a>
             <div class="clearfix"></div>
           </div>
         </div>
         <div class="food-menu-box-6">
           <div class="food-menu-img">
-            <img src="images/menu-pizza.jpg" alt="Chicken Hawain Pizza" class="img-responsive img-curve">
+            <img
+              src="images/menu-pizza.jpg"
+              alt="Chicken Hawain Pizza"
+              class="img-responsive img-curve"
+            />
           </div>
           <div class="food-menu-desc">
             <h4>Food Title</h4>
             <p class="food-price">$2.3</p>
-            <p class="food-detail">Made with Italian Sauce, Chicken, and organice vegetables.</p>
-            <br>
+            <p class="food-detail">
+              Made with Italian Sauce, Chicken, and organice vegetables.
+            </p>
+            <br />
             <a href="#" class="btn btn-primary">Order Now</a>
             <div class="clearfix"></div>
           </div>
         </div>
         <div class="food-menu-box-6">
           <div class="food-menu-img">
-            <img src="images/menu-pizza.jpg" alt="Chicken Hawain Pizza" class="img-responsive img-curve">
+            <img
+              src="images/menu-pizza.jpg"
+              alt="Chicken Hawain Pizza"
+              class="img-responsive img-curve"
+            />
           </div>
           <div class="food-menu-desc">
             <h4>Food Title</h4>
             <p class="food-price">$2.3</p>
-            <p class="food-detail">Made with Italian Sauce, Chicken, and organice vegetables.</p>
-            <br>
+            <p class="food-detail">
+              Made with Italian Sauce, Chicken, and organice vegetables.
+            </p>
+            <br />
             <a href="#" class="btn btn-primary">Order Now</a>
             <div class="clearfix"></div>
           </div>
         </div>
         <div class="food-menu-box-6">
           <div class="food-menu-img">
-            <img src="images/menu-pizza.jpg" alt="Chicken Hawain Pizza" class="img-responsive img-curve">
+            <img
+              src="images/menu-pizza.jpg"
+              alt="Chicken Hawain Pizza"
+              class="img-responsive img-curve"
+            />
           </div>
           <div class="food-menu-desc">
             <h4>Food Title</h4>
             <p class="food-price">$2.3</p>
-            <p class="food-detail">Made with Italian Sauce, Chicken, and organice vegetables.</p>
-            <br>
+            <p class="food-detail">
+              Made with Italian Sauce, Chicken, and organice vegetables.
+            </p>
+            <br />
             <a href="#" class="btn btn-primary">Order Now</a>
             <div class="clearfix"></div>
           </div>
@@ -152,9 +215,33 @@
     <section class="social">
       <div class="container text-center">
         <ul>
-          <li><a href="#"><img width="48" height="48" src="https://img.icons8.com/fluency/48/facebook-new.png" alt="facebook-new"/></a></li>
-          <li><a href="#"><img width="48" height="48" src="https://img.icons8.com/fluency/48/instagram-new.png" alt="instagram-new"/></a></li>
-          <li><a href="#"><img width="48" height="48" src="https://img.icons8.com/color/48/twitter--v1.png" alt="twitter--v1"/></a></li>
+          <li>
+            <a href="#"
+              ><img
+                width="48"
+                height="48"
+                src="https://img.icons8.com/fluency/48/facebook-new.png"
+                alt="facebook-new"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img
+                width="48"
+                height="48"
+                src="https://img.icons8.com/fluency/48/instagram-new.png"
+                alt="instagram-new"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img
+                width="48"
+                height="48"
+                src="https://img.icons8.com/color/48/twitter--v1.png"
+                alt="twitter--v1"
+            /></a>
+          </li>
         </ul>
       </div>
     </section>
